--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="No MC No Gain">
     <meta name="msapplication-TileImage" content="./images/icons/icon.png">
-    <meta name="msapplication-TileColor" content="#FF0012">
+    <meta name="msapplication-TileColor" content="#87000c">
+    <meta name="theme-color" content="#87000c">
 </head>
 
 <body>
