--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
                 <p>
                     <button type="button" class="btn btn-theme" @click.prevent="modal.opened = false">Fechar</button>
+                    <button type="button" class="btn btn-default" @click.prevent="erase()">Trocar</button>
                 </p>
             </div>
         </div>
